--- a/src/app/paises/pages/selector/selector.component.html
+++ b/src/app/paises/pages/selector/selector.component.html
@@ -1,15 +1,16 @@
 <h1 class="mt-5">Selectores Anidados</h1>
 <hr>
 <form [formGroup]="miformulario"
-      (ngSubmit)="guardar()">
+      >
     <div class="row">
         <div class="col">
             <label class="form-label">Region:</label>
             <select class="form-control"
                     formControlName="region">
                 <option value="">--Seleccione Region--</option>
-                <option value="1">Europe</option>
 
+                <option *ngFor="let region of regiones"
+                        [value]="region | lowercase">{{region}}</option>
             </select>
         </div>
     </div>
@@ -17,8 +18,9 @@
 <div class="row mt-4">
     <div class="col">
         <button class="btn btn-primary float-end"
-                type="submit">
-            Guardar
+                type="button"
+                (click)="guardar()">
+            Seleccionar
         </button>
     </div>
 </div>
