--- a/src/app/paises/pages/selector/selector.component.html
+++ b/src/app/paises/pages/selector/selector.component.html
@@ -1,7 +1,8 @@
 <h1 class="mt-5">Selectores Anidados</h1>
 <hr>
-<form [formGroup]="miformulario"
-      >
+<form [formGroup]="miformulario">
+    
+      <!-- Seccion Region -->
     <div class="row">
         <div class="col">
             <label class="form-label">Region:</label>
@@ -14,16 +15,31 @@
             </select>
         </div>
     </div>
-</form>
-<div class="row mt-4">
-    <div class="col">
-        <button class="btn btn-primary float-end"
-                type="button"
-                (click)="guardar()">
-            Seleccionar
-        </button>
+    <!-- Seccioin -->
+    <div class="row">
+        <div class="col">
+            <label class="form-label">Pais:</label>
+            <select class="form-control"
+                    formControlName="pais">
+                <option value="">--Selecciona el Pais--</option>
+
+                <option *ngFor="let pais of paises"
+                        [value]="pais.cca3">{{pais.name.common | json}}</option>
+            </select>
+        </div>
     </div>
-</div>
+
+    <!-- Seccion Boton -->
+    <div class="row mt-4">
+        <div class="col">
+            <button class="btn btn-primary float-end"
+                    type="button"
+                    (click)="guardar()">
+                Seleccionar
+            </button>
+        </div>
+    </div>
+</form>
 <h3>formulario</h3>
 <pre>Valido:{{miformulario.valid}}</pre>
 <pre>{{miformulario.value | json}}</pre>
