se cambia el valor del option se asigna el valor proveniente en cca3 y se muestra el name.common

--- a/src/app/paises/pages/selector/selector.component.html
+++ b/src/app/paises/pages/selector/selector.component.html
@@ -40,7 +40,7 @@
                 <option value="">--Selecciona el pais fronterizo--</option>
 
                 <option *ngFor="let frontera of fronteras"
-                        [value]="frontera">{{frontera | json}}</option>
+                        [value]="frontera.cca3">{{frontera.name.common| json}}</option>
             </select>
         </div>
     </div>
